--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ a {
 .visual_box {
   width: 30%;
   background: #111;
+  border:1px solid #111;
   padding: 1vw;
   align-items: center;
   position: absolute;
@@ -77,7 +78,8 @@ a {
   font-size: 16px;
 }
 .visual_box:hover {
-  background: #fff;
+  background:transparent;
+  border:1px solid #111;
   width: 30%;
 }
 .visual_box:hover a {
@@ -227,14 +229,17 @@ a {
   height: 5vh;
   background: #111;
   margin: 2vw auto;
+  border:1px solid #111;
 }
 #con1 .box a {
   color: #fff;
   height: 5vh;
   line-height: 5vh;
+
 }
 #con1 .box:hover {
-  background: #eee;
+  background:transparent;
+  border:1px solid #111;
 }
 #con1 .box:hover a {
   color: #111;
