--- a/css/holiday.css
+++ b/css/holiday.css
@@ -14,6 +14,54 @@ ul {
 a {
   text-decoration: none;
 }
+/*애니메이션*/
+@keyframes up {
+  0% {
+    transform: translateY(50px);
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes down {
+  0% {
+    transform: translateY(-50px);
+  }
+  100% {
+    transform: translateY(0px);
+    opacity: 1;
+  }
+}
+@keyframes left {
+  0% {
+    transform: translateX(-150px);
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes right {
+  0% {
+    transform: translateX(250px);
+  }
+  100% {
+    transform: translateX(0px);
+    opacity: 1;
+  }
+}
+@keyframes animate {
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.7;
+  }
+  100% {
+    opacity: 1;
+  }
+}
 #visual {
   width: 100%;
   height: 100vh;
@@ -58,6 +106,10 @@ a {
 .con1_img {
   width: 40%;
   margin: 3vw auto;
+  opacity: 0;
+}
+.con1_img.on {
+  animation: up 1s ease-out forwards;
 }
 .con1_img img {
   width: 100%;
@@ -66,25 +118,37 @@ a {
   text-align: center;
   font-size: 40px;
   padding-top: 1vw;
-
   font-family: "Playfair Display", serif;
   background: linear-gradient(45deg, #111, #555, #f5e8d2);
   color: transparent;
   -webkit-background-clip: text;
+  opacity: 0;
 }
 #con1 h2:nth-of-type(1) {
   padding-top: 5vw;
 }
+#con1 h2:nth-of-type(1).on {
+  animation: up 1s ease-out forwards;
+}
+#con1 h2:nth-of-type(2).on {
+  animation: up 1s 0.5s ease-out forwards;
+}
 #con1 h4 {
   text-align: center;
   font-size: 25px;
-  padding-top: 2vw;
+  padding-top: 0.5vw;
   line-height: 3vw;
   background: linear-gradient(45deg, #111, #555, #f5e8d2);
   color: transparent;
   -webkit-background-clip: text;
+  opacity: 0;
 }
-
+#con1 h4:nth-of-type(1).on {
+  animation: up 1s ease-out forwards;
+}
+#con1 h4:nth-of-type(2).on {
+  animation: up 1s 0.5s ease-out forwards;
+}
 /*con2*/
 #con2 {
   width: 100%;
@@ -97,6 +161,30 @@ a {
   justify-content: space-around;
   text-align: center;
   align-items: center;
+}
+.b2 {
+  opacity: 0;
+}
+.b2.on {
+  animation: right 1s ease-out forwards;
+}
+.b3 {
+  opacity: 0;
+}
+.b3.on {
+  animation: left 1s ease-out forwards;
+}
+.b4 {
+  opacity: 0;
+}
+.b4.on {
+  animation: right 1s ease-out forwards;
+}
+.b1 {
+  opacity: 0;
+}
+.b1.on {
+  animation: left 1s ease-out forwards;
 }
 .beauty_list li {
   text-align: center;
@@ -179,13 +267,26 @@ a {
 #con3 h2 {
   text-align: center;
   font-size: 25px;
-  padding-top: 5vw;
-  line-height: 3vw;
+  padding-top: 1vw;
   background: linear-gradient(45deg, #111, #555, #f5e8d2);
   color: transparent;
   -webkit-background-clip: text;
+  opacity: 0;
+}
+#con3 h2:nth-of-type(1) {
+  padding-top: 10vw;
+}
+#con3 h2:nth-of-type(1).on {
+  animation: up 1s ease-out forwards;
+}
+#con3 h2:nth-of-type(2).on {
+  animation: up 1s 0.5s ease-out forwards;
 }
 #con3 video {
   width: 60%;
   margin: 4vw auto;
+  opacity: 0;
+}
+#con3 video.on {
+  animation: up 1s 1s ease-out forwards;
 }
