--- a/css/header.css
+++ b/css/header.css
@@ -1,32 +1,138 @@
-header {
-  width: 100%;
-  height: 13vh;
-  text-align: center;
+@media (min-width: 1221px) {
+  header {
+    width: 100%;
+    height: 13vh;
+    text-align: center;
+  }
+  header h1 {
+    width: 10%;
+    margin: 20px auto;
+  }
+  header h1 img {
+    width: 100%;
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    /* position: fixed;*/
+    background: #fff;
+  }
+  .menu li:not(:last-of-type) {
+    margin-right: 150px;
+  }
+
+  .menu a {
+    color: #222;
+    font-size: 1vw;
+  }
+  .menu a:hover {
+    font-weight: bold;
+  }
 }
-header h1 {
-  width: 10%;
-  margin: 20px auto;
-}
-header h1 img {
-  width: 100%;
-}
-.menu {
-  display: flex;
-  justify-content: center;
-  width: 100%;
-  height: 50px;
-  line-height: 50px;
-  /* position: fixed;*/
-  background: #fff;
-}
-.menu li:not(:last-of-type) {
-  margin-right: 150px;
+@media (min-width: 768px) and (max-width: 1220px) {
+  header {
+    width: 100%;
+    height: 15vh;
+    text-align: center;
+  }
+  header h1 {
+    width: 20%;
+    margin: 20px auto;
+  }
+  header h1 img {
+    width: 100%;
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    /* position: fixed;*/
+    background: #fff;
+  }
+  .menu li:not(:last-of-type) {
+    margin-right: 150px;
+  }
+
+  .menu a {
+    color: #222;
+    font-size: 1.7vw;
+  }
+  .menu a:hover {
+    font-weight: bold;
+  }
 }
 
-.menu a {
-  color: #222;
-  font-size: 1vw;
+@media (min-width: 392px) and (max-width: 767px) {
+  header {
+    width: 100%;
+    height: 15vh;
+    text-align: center;
+  }
+  header h1 {
+    width: 30%;
+    margin: 20px auto;
+  }
+  header h1 img {
+    width: 100%;
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    /* position: fixed;*/
+    background: #fff;
+  }
+  .menu li:not(:last-of-type) {
+    margin-right: 35px;
+  }
+
+  .menu a {
+    color: #222;
+    font-size: 2.2vw;
+  }
+  .menu a:hover {
+    font-weight: bold;
+  }
 }
-.menu a:hover {
-  font-weight: bold;
+
+@media (max-width: 391px) {
+  header {
+    width: 100%;
+    height: 15vh;
+    text-align: center;
+  }
+  header h1 {
+    width: 35%;
+    margin: 20px auto;
+  }
+  header h1 img {
+    width: 100%;
+  }
+  .menu {
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    height: 50px;
+    line-height: 50px;
+    /* position: fixed;*/
+    background: #fff;
+  }
+  .menu li:not(:last-of-type) {
+    margin-right: 30px;
+  }
+
+  .menu a {
+    color: #222;
+    font-size: 2.6vw;
+  }
+  .menu a:hover {
+    font-weight: bold;
+  }
 }
